# local-voice-toolkit

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md
.github/workflows/: build.yml
scripts/: build-dmg.sh
src/: App.test.tsx
src-tauri/: Cargo.toml  Info.plist
src-tauri/capabilities/: default.json
src-tauri/src/: hotkeys.rs  lib.rs  right_option.rs
src-tauri/src/accessibility/: paste.rs  selected_text.rs
src-tauri/src/commands/: permissions.rs  settings.rs  stt.rs  tts.rs
src-tauri/src/engines/: whisper.rs
src-tauri/src/models/: registry.rs
src/components/: DictationOverlay.tsx  FloatingOverlay.tsx  Onboarding.tsx  ScreenReader.tsx  SettingsPanel.tsx  StatusIndicator.tsx  WaveformViz.tsx
src/hooks/: useTTS.ts
src/test/: setup.ts
